--- a/zeros_certifies_stage.tex
+++ b/zeros_certifies_stage.tex
@@ -6,7 +6,7 @@
 \usepackage{natbib}
 \usepackage{algorithm}
 \usepackage{algorithmic}
-
+\usepackage[utf8]{inputenc}
 \textwidth15cm
 \oddsidemargin+0.25cm
 \textheight24cm
@@ -36,14 +36,14 @@
 	
 	\section{Approximation uniforme sur un segment}
 	
-	Dans cette sections on approchera les foncitons D-finies à l'aide des polyonômes.
+	Dans cette section on approchera les fonctions D-finies à l'aide des polyonômes.
 	Wierstrass a montré qu'il était possible d'approximer sur un segment n'importe quelle fonction continue à partir de polynômes. Cependant, toutes les méthodes d'interpollation de polynômes ne convergent pas. Un exemple est donné par Runge, la suite de polynômes qui interpollent à intervalles égaux la fonction $f(x)=\frac{1}{1+x^{2}}$ sur $[-5,5]$ diverge lorsque $N \rightarrow \infty$.
 	
-	\subsection{Polynômes de Tchebyshev méthode de Boyd}
+	\subsection{Polynômes de Tchebychev méthode de Boyd}
 	
 	
-	Le mathématicien Russe Sergei Bernstein (1880-1968) a montré que la série de Chebyshev d'une fonction analytique a une convergence quadratique par rapport à la norme infinie. C'est à dire que l'erreur après avoir tronqué la série après le Nème termes est $O(exp(-N\mu))$. On s'intéressera plus tard à une vrai majoration du reste de la série.
-	C'est cette majoration avec le théorème des valeurs intermédiaires qui nous permettra de certifier les zéros de la fonction f.
+	Le mathématicien Russe Sergei Bernstein (1880-1968) a montré que la série de Chebychev d'une fonction analytique a une convergence quadratique par rapport à la norme infinie. C'est à dire que l'erreur après avoir tronqué la série après le Nème termes est $O(exp(-N\mu))$. On s'intéressera plus tard à une vrai majoration du reste de la série.
+	C'est cette majoration avec le théorème des valeurs intermédiaires qui nous permettra de certifier les zéros de notre fonction D-finie f.
 	
 	\newtheorem{proposition}{Proposition}
 	\begin{proposition}
@@ -80,33 +80,34 @@
 	
 	\noindent $T_{j}(x)=cos(j$  $arccos(x))$
 	
-	\noindent On voit ici la limite de cet algorithme, il necessite une conaissance de la fonction, et c'est justement ce que nous cherchons ici.
+	\noindent On voit ici la limite de cet algorithme, il necessite une connaissance de la fonction, et c'est justement ce que nous cherchons ici.
 	
 	\subsection{La méthode des éléments finis}
 	
-	Une bonne méthode de résolution d'équation différentielle est la méthode des éléments finis. Il faut réflechir à une famille de fonction qu'il pourrait-être interressant de prendre ici. La famille usuelle des fonctions en escalier ne semble pas être suffisante puisqu'elle ne satisfait la condition $C^{\infty}$.
+	Une bonne méthode de résolution d'équations différentielles est la méthode des éléments finis. Il faut réflechir à une famille de fonctions qu'il pourrait-être intéressant de prendre ici. La famille usuelle des fonctions en "escalier" ne semble pas être suffisante puisqu'elle ne satisfait la condition $C^{\infty}$.
 	La famille des polynômes de Tchebyshev semble donc la solution.
 	
 	\subsection{Méthode de Sturm}
 	
-	Sur un intervalle donné, on veut maintenant voir si il y a des zéros grace à l'approximation de Tchebyshev et la proposition 1. Nous allons utiliser le principe d'exclusion en comptant le nombre de racines dans l'intervalle à l'aide du théorème de Sturm. 
+	Sur un intervalle donné, on veut maintenant voir si il y a des zéros grace à l'approximation de Tchebychev et la proposition 1. Nous allons utiliser le principe d'exclusion en comptant le nombre de racines dans l'intervalle à l'aide du théorème de Sturm. 
 	
 	
-	Soit P un polynome unitaire, $P(x)=x^{n} + \sum^{n-1}_{k=0}a_{k}x^{k}$, \textit {la suite de Sturm} est une suite finie de polynôme définie à partir de P comme suit:\\
+	Soit P un polynome unitaire, $P(x)=x^{n} + \sum^{n-1}_{k=0}a_{k}x^{k}$, \textit {la suite de Sturm} est une suite finie de polynôme défini à partir de P comme suit:\\
 	$P_{0}=P$, $P_{1}=P'$, et pour $k > 1$ si $P_{k} \neq 0$,  $P_{k+1}$ vérifie
 	\[P_{k-1}=P_{k}Q_{k}-P_{k+1},\hspace{2mm}\text{avec }    deg(P_{k+1})<deg(P_{k})\] 
 	$P_{k+1}$ est l'opposée du reste dans la division euclidienne de $P_{k-1}$ par $P_{k}$. On a alors le théorème suivant 
+	
 	\newtheorem{theorem}{Théorème}[section] 
-	\begin{theorem}(Sturm-Habicht)\\
+	\begin{theorem}(Sturm-Habicht)
 		Notons $\sigma(\xi)$ le nombre de fois où la suite $P(\xi),P_{1}(\xi),...,P_{m}(\xi)$ change de signe (un zéro ne comptant pas comme changement de signe).
 		Pour deux réels $a,b$ avec $a<b$ où $a$ et $b$ ne sont pas des racines de P, le nombre de racines dans l'intervalle $[a,b]$ vaut
 		$\sigma(a)-\sigma(b)$.
 	\end{theorem}
 	
-	\section{Methode de Newton}
+	\section{Méthode de Newton}
 	
 	La méthode de Newton définie par la suite $x_{k+1}=N_{f}(x_{k})$ avec $N_{f}(x)=x-Df(x)^{-1}f(x)$ dans notre cas, nous sommes dans $\mathbb{R}$ alors la méthode de Newton se réécrit $N_{f}(x)=x-\frac{f(x)}{f'(x)}$ 
-	\noindent $\alpha(f,x)$
+	
 	\subsection{Les applications contractantes}
 	
 	\subsection{L'algorithme de Newton}
@@ -136,14 +137,18 @@
 	\subsection{Théorie alpha de Smale}
 	
 	Dans cette section les espaces considérés sont des espaces de Banach, $U$ est un ouvert de l'espace. Et les fonctions $f:U\rightarrow \mathbb{F}$ sont analytiques sur U. Nous sommes dans le cas particulier de $\mathbb{R}$ mais cette théorie s'applique sur tout espace métrique complet. 
+	
+	\newtheorem{definition}{Définition}
+	\begin{definition}
+
 	On définit les trois opérateurs $\gamma(f,x)$, $\beta(f,x)$, et $\alpha(f,x)$ sur les fonctions analytiques sur $\mathbb{R}$:
 	
 	\[\gamma(f,x)=\limsup_{k \geq 2}\left\|Df(x)^{-1}\frac{D^{k}f(x)}{k!}\right\|^{\frac{1}{k-1}}\]
 	\[\beta(f,x)=\left\|Df(x)^{-1}f(x)\right\|\]
 	\[\alpha(f,x)=\gamma(f,x)\beta(f,x)\]
+	\end{definition}
 	
-	
-	\begin{theorem}(Théorème gamma) Soit $\zeta \in U$ tel que $f(\zeta)=0$ et que $Df(\zeta)$ soit inversible. Soit $x_{0} \in U$ tel que \\
+	\begin{theorem}(Théorème gamma) Soit $\zeta \in U$ tel que $f(\zeta)=0$ et $Df(\zeta)$ soient inversibles. Soit $x_{0} \in U$ tel que \\
 		\[\left\|x_{0}-\zeta\right\|\gamma(f,\zeta) \leq \frac{3-\sqrt{7}}{2}=0.17712.... \]
 		Alors la suite de Newton $x_{k+1}=N_{f}(x_{k})$ converge vers $\zeta$. De plus\\
 		\[\left\|x_{k}-\zeta\right\| \leq \left(\frac{1}{2}\right)^{n}\left\|x_{0}-\zeta\right\|\]
@@ -169,37 +174,11 @@
 	\end{corollaire}
 	\noindent \textbf{Esquisse de démonstration} $(2-\sqrt(2)/2$ est le maximum de $(1+\alpha-\sqrt{(1+\alpha)^{2}-8\alpha})/4$ lorsque $\alpha \in [0,3-2\sqrt(2)]$.
 	
-	
+	(À compléter)
 	\noindent Opérateur $\gamma(f,x)$
 	
 	Ce sera ce dernier théorème qui nous permettra de vérifier si nous avons bien un zéro. Cependant le calcule de $\gamma$ et donc de $\alpha$ sont encore difficiles pour des coefficients de fonctions D-finies vérifiant une récurrence polynomiale. Le chapitre sur les séries majorantes fournie une majoration du coefficient $\alpha$
 	
-	
-	\subsection{Algorithmes}
-	
-	Les algorithmes:
-	
-	On va commencer par l'algorithme d'exclusion:
-	\begin{algorithm}
-		\caption{bisection-exclusion method}
-		
-		\vspace{2mm}
-		
-		\textbf{Entrée:} fonction D-finie $F(x)=\sum_{n \geq\beta} f(n)x^{n}$. interval (a,b)
-		
-		\textbf{Sortie:} $(a_{1},b_{1})\cup (a_{2},b_{2})$
-		
-		\begin{algorithmic}[1]
-			
-			\STATE $g(x)=|g(\frac{a+b}{2})|-maj(F(x-\frac{a+b}{2})-F(\frac{a+b}{2}))$
-			\STATE c=premier\_zero\_positif(g)
-			\STATE Renvoyer($(a,\frac{a+b}{2}-c)\cup (\frac{a+b}{2}+c,b)$)
-		\end{algorithmic}
-		
-	\end{algorithm}
-	
-	\noindent maj: fonction de majoration fournie dans le module Ore\_algebra.analytic de Marc Mezzarobba\\
-	zéropositif(g): le premier zéro sur lequel la fonction g s'annule sur ${R}$
 	
 	
 	
@@ -220,7 +199,7 @@
 	
 	La fonction $\phi$ est donnée par une formule explicite, elle-même décrite par un petit nombre de paramètres. Les formes qu'elle peut prendre sont détaillées par la suite.
 	
-	\subsection{Le théorème de Perrron-Kreuser}
+	\subsection{Le théorème de Perron-Kreuser}
 	
 	On s'interesse ici au comportement asymptotique des solutions des récurrences. Supposons que les coefficients $b_{n}(n)$ de l'équation
 	\[b_{s}(n)u_{n+s}+b_{s-1}(n)u_{n+s-1}+...+b_{s'}(n)u_{n+s'}=0  \tag{*}\]
@@ -234,7 +213,7 @@
 	
 	pour que cette expression s'annule, il est nécessaire que les termes asymptotiquement dominants se compense, et donc que l'exposant $d_{k}+k\kappa$ le plus grand soit atteint au moins deux fois. Alors $-\kappa$ doit être parmis les pentes des tes du \textit{polygone de newton} de l'équation.
 	
-	\newtheorem{definition}{Définition}
+	
 	\begin{definition} Le polygône de Newton est l'envellope convexe supérieure des points $(k, d_{k}) \in \mathbb{R}$, si E=[A,B] désigne une arête du polygône de Newton, on note $\kappa(E)$ l'opposée de sa pente, et on définit l'équation caractéristique associée à E (ou à $\kappa(E))$ par
 		\[\chi_{E}(\lambda)=\sum_{(k,d_{k}) \in E} c_{k}\lambda^{k-t}\]
 		Où $(t,d_{t})=A$ l'extrémité gauche du segment E.
@@ -302,8 +281,8 @@
 	l'algorithme renvoie le $kappa$ maximale et le polynôme réciproque de l'équation caractéristique correspondante à celui-ci.
 	
 	\begin{proposition} Posons $R=\sum_{k=0}^{s} b^{[k]}(n)S^{k} \hspace{4mm} \in \mathbb{Q}[n]\big<S\big>$ et supposons que R n'est pas réduit à un terme $b^{[s]}S^{k}$. On a donc
-		\[\limsup_{n \rightarrow \infty }\Big|\frac{u_{n}}{n!^{k}}\Big|^{\frac{1}{n}} \hspace{4mm} \text{où } \alpha=\frac{1}{\delta(P_{\alpha})}\]
-		Pour toute solution $(u_{n})$ vérifiant R.u=0 avec égalité pour une solution générique. 
+	\[\limsup_{n \rightarrow \infty }\Big|\frac{u_{n}}{n!^{k}}\Big|^{\frac{1}{n}} \hspace{4mm} \text{où } \alpha=\frac{1}{\delta(P_{\alpha})}\]
+	Pour toute solution $(u_{n})$ vérifiant R.u=0 avec égalité pour une solution générique. 
 	\end{proposition}
 	\textbf{Esquisse de démonstration}
 	Le polygone de Newton étant convexe, le coefficient $\kappa$ le plus élevé correspond à un segment relié au sommet le plus à droite du polygone.\\
@@ -346,7 +325,7 @@
 		
 	\end{algorithm}
 	La multiplication par g s'assure que les premier termes $u_{0},...,u_{s-1}$
-	s'affranchissent des potentielles contraintes crées par les terme indéxés sur les coefficients négatifs. Mais ne change pas la relation pour les termes supérieurs à s.
+	s'affranchissent des potentielles contraintes crées par les termes indéxés sur les coefficients négatifs. Mais ne change pas la relation pour les termes supérieurs à s.
 	
 	Considérons $R \in \mathbb{Q}[n]\big< S\big>$ un opérateur non singulier, d'ordre s. Une solution $(u_{n})$ de la récurrence R.u=0, u(z) est annulée par l'opérateur RecToDiffeq$(R)(\theta)=\sum_{k=0}^{r}a^{[k]}\theta^{k} \in \mathbb{Q}[z]\big< \theta\big>$. En divisant par $a^{[r]}$ on obtient
 	
@@ -382,10 +361,10 @@
 	
 	
 	\begin{proposition}Soit $R \in \mathbb{Q}[n]\big< S\big>$ un opérateur non singulier, réversible de coefficient constant par rapport à S non nul. Soient $p/q, P_{\alpha}$ le comportement asymptotique génériquee renvoyé par $Asympt$. On suppose que $\delta(P_{\alpha})<\infty$ alors $Normalize(R,p/q)$ calcule un opérateur différentiel D qui annule la série 
-		\[u(x)=\sum_{n=0}^{\infty} \psi_{n}u_{n}x^{n}\]
-		pour toute suite $\psi$ et $u$ solutions de
-		\[(n+q)^{p}\psi_{n+q}=\psi_{n}\]
-		et $R.u=0$, l'opérateur D est régulier à l'origine et le module de sa singularité dominante est égale à $\delta(P_{\alpha})$.
+	\[u(x)=\sum_{n=0}^{\infty} \psi_{n}u_{n}x^{n}\]
+	pour toutes suites $\psi$ et $u$ solutions de
+	\[(n+q)^{p}\psi_{n+q}=\psi_{n}\]
+	et $R.u=0$, l'opérateur D est régulier à l'origine et le module de sa singularité dominante est égale à $\delta(P_{\alpha})$.
 	\end{proposition}
 	
 	\subsection{Séries majorantes}
@@ -393,7 +372,7 @@
 	\begin{definition} Une série formelle v $\in \mathbb{R}_{+}[[\mathbb{Z}]]$ est appelée série majorante de $ u \in \mathbb{R}[[\mathbb{Z}]$ si v domine u coefficient par coefficient, $\forall n |u_{n}|\leq v_{n}$. On note $u \unlhd v$.
 	\end{definition}
 	
-	\begin{proposition} Soient $u,u^{[1]},u^{[2]}\in \mathbb{R}[[x]]$, et $v,v^{[1]},v^{[2]} \in \mathbb{R}_{+}[[x]]$ tels que  $u\leq v,u^{[1]}\leq v^{[1]}$ et $u^{[2]}\leq v^{[2]}$ alors
+	\begin{proposition} Soient $u,u^{[1]},u^{[2]}\in \mathbb{R}[[x]]$, et $v,v^{[1]},v^{[2]} \in \mathbb{R}_{+}[[x]]$ tels que $u\leq v,u^{[1]}\leq v^{[1]}$ et $u^{[2]}\leq v^{[2]}$ alors
 		
 		(a)Le rayon de convergence de $v$ est inclus dans celui de $u$;
 		
@@ -403,6 +382,7 @@
 		\[u' \unlhd v'; \hspace{6mm} u^{[1]}+u^{[2]}\unlhd v^{[1]}+v^{[2]}; \hspace{6mm}u^{[1]}u^{[2]}\unlhd v^{[1]}v^{[2]}; \]
 		
 		(e)Si $v^{[1]}(0)=0$ alors $ u^{[2]} \circ u^{[1]} \unlhd v^{[2]}\circ v^{[1]}$.
+		
 	\end{proposition}
 	
 	\noindent\textbf{Méthode de majoration avec un example simple}\\
@@ -413,7 +393,7 @@
 	On écrit la relation sur u en terme de séries: $(n+1)u_{n+1}=\sum_{k=0}^{n}u_{n-j}a_{j}$ en considérant $v$ telle que  $(n+1)v_{n+1}=\sum_{k=0}^{n}v_{n-j}M\rho^{-j}$ on observe $v'(z)=\frac{M}{1-z\rho^{-1}}v(z)$ \\
 	On a $v=v_{0}(1-z\rho^{-1})^{-M\rho}$. Si $|u_{0}| \leq v_{0}$ la récurrence permet de conclure $ u\unlhd v$. On sait que le rayon de convergence de $v$ est $\rho$ donc celui de $u$ est supérieur à $\rho$.
 	
-	\subsection{Séries majorantes  pour les fonctions D-finies normalisées}
+	\subsection{Séries majorantes pour les fonctions D-finies normalisées}
 	
 	Soit D une équation différentielle normalisée, 
 	
@@ -463,6 +443,29 @@
 	
 	\section{Les méthodes d'exclusion de zéros}
 	\subsection{L'algorithme de Bissection-exclusion de J.-C.Yakoubsohn}
+	
+	\begin{algorithm}
+		\caption{bisection-exclusion method}
+		
+		\vspace{2mm}
+		
+		\textbf{Entrée:} fonction D-finie $F(x)=\sum_{n \geq\beta} f(n)x^{n}$. interval (a,b)
+		
+		\textbf{Sortie:} $(a_{1},b_{1})\cup (a_{2},b_{2})$
+		
+		\begin{algorithmic}[1]
+			
+			\STATE $g(x)=|g(\frac{a+b}{2})|-maj(F(x-\frac{a+b}{2})-F(\frac{a+b}{2}))$
+			\STATE c=premier\_zero\_positif(g)
+			\STATE Renvoyer($(a,\frac{a+b}{2}-c)\cup (\frac{a+b}{2}+c,b)$)
+		\end{algorithmic}
+		
+	\end{algorithm}
+	
+	\noindent maj: fonction de majoration fournie dans le module Ore\_algebra.analytic de Marc Mezzarobba\\
+	zéropositif(g): le premier zéro sur lequel la fonction g s'annule sur ${R}$
+	
+	
 	\subsection{Séparation des zéros via la méthode de Rouché}
 	
 \end{document}
