--- a/zeros_certifies_stage.tex
+++ b/zeros_certifies_stage.tex
@@ -136,7 +136,7 @@
 	\end{theorem}
 	Ce théorème est bien utile, surtout la dernière inégalité permettant d'encadrer la distance au zéro, bien utile pour trouver un zéro à une précision $epsilon$. 
 	
-	\subsection{Comment vérifier les hypothèse de contraction} 
+	\subsection{Comment vérifier les hypothèses de contraction} 
 	
 	\subsection{L'algorithme de Newton}
 	
@@ -228,7 +228,7 @@
 	avec $c_{k} \in E$ et $d_{k} \in \mathbb{Z}$. Supposons de plus que $u_{n}$ est une solution de la forme  
 	\[\frac{u_{n+1}}{u_{n}}\sim \lambda n^{\kappa} \hspace{2mm} \text{quand}n \rightarrow \infty\]
 	
-	En réécrivant l'équation séquencielle avec ses coefficient asymptotiques $n \rightarrow \infty$
+	\noindent En réécrivant l'équation séquencielle avec ses coefficients asymptotiques $n \rightarrow \infty$
 	\[c_{s}\lambda^{s} n^{d_{s}+s\kappa}+c_{s-1}u_{n}\lambda^{s-1} n^{d_{s-1}+(s-1)\kappa}+...+c_{s'}\lambda^{s'} n^{d_{s'}+s'\kappa}u_{n}\]
 	
 	pour que cette expression s'annule, il est nécessaire que les termes asymptotiquement dominants se compense, et donc que l'exposant $d_{k}+k\kappa$ le plus grand soit atteint au moins deux fois. Alors $-\kappa$ doit être parmis les pentes des tes du \textit{polygone de newton} de l'équation.
@@ -266,7 +266,7 @@
 	\subsection{Pôles et singularités dominantes}
 	
 	\begin{definition} Si P $\in \mathbb{Q}[z]$ est un polynôme non réduit à un monôme, on note respectivement
-		\[\delta(P)=min\{|\zeta| \neq 0: P(\zeta)=0\} \text{ et } \mu_{\delta}=max\{\mu(\zeta,P):|\zeta|=\delta(P)\}\] 
+		\[\delta(P)=min\{|\zeta| \neq 0: P(\zeta)=0\} \text{ et } \nu_{\delta}=max\{\nu(\zeta,P):|\zeta|=\delta(P)\}\] 
 		On appelle \textit{pôles dominants} d'une fraction rationelle et $\delta$-racines  de son dénominateur, et \textit{singularités dominantes} d'un opérateur différentielle à coefficient polynomiaux celles de son coefficient de tête.  
 	\end{definition}
 	
@@ -296,9 +296,9 @@
 		
 	\end{algorithm}
 	
-	\noindent D'après le théorème de Perron-kreuser les solutions dont "la croissance est la plus rapide", c'est à dire celle dont le coeffficient $kappa$ est le plus grand est celle la plus à droite du polygone de Newton, et les racine de module maximal de son équation caractéristique.
+	\noindent D'après le théorème de Perron-kreuser les solutions dont "la croissance est la plus rapide", c'est à dire celle dont le coeffficient $kappa$ est le plus grand est celle la plus à droite du polygone de Newton, et les racines de module maximal de son équation caractéristique.
 	
-	l'algorithme renvoie le $kappa$ maximale et le polynôme réciproque de l'équation caractéristique correspondante à celui-ci.
+	l'algorithme renvoie le $kappa$ maximale et le polynôme réciproque de l'équation caractéristique correspondante au coefficient $\kappa$.
 	
 	\begin{proposition} Posons $R=\sum_{k=0}^{s} b^{[k]}(n)S^{k} \hspace{4mm} \in \mathbb{Q}[n]\big<S\big>$ et supposons que R n'est pas réduit à un terme $b^{[s]}S^{k}$. On a donc
 		\[\limsup_{n \rightarrow \infty }\Big|\frac{u_{n}}{n!^{k}}\Big|^{\frac{1}{n}} \hspace{4mm} \text{où } \alpha=\frac{1}{\delta(P_{\alpha})}\]
@@ -356,7 +356,6 @@
 	
 	Dans le cas général, on commence par normaliser R.
 	Le produit symétrique n'est pas quelconque, regarder Barkatou et al.
-	\newpage
 	\begin{algorithm}
 		\caption{Normalize$(R,\kappa)$}
 		
@@ -389,7 +388,7 @@
 	
 	\subsection{Séries majorantes}
 	
-	\begin{definition} Une série formelle v $\in \mathbb{R}_{+}[[\mathbb{Z}]]$ est appelée série majorante de $ u \in \mathbb{R}[[\mathbb{Z}]$ si v domine u coefficient par coefficient, $\forall n |u_{n}|\leq v_{n}$. On note $u \unlhd v$.
+	\begin{definition} Une série formelle v $\in \mathbb{R}_{+}[[\mathbb{Z}]]$ est appelée série majorante de $ u \in \mathbb{R}[[\mathbb{Z}]$ si v domine u coefficient par coefficient, $\forall n$ $ |u_{n}|\leq v_{n}$. On note $u \unlhd v$.
 	\end{definition}
 	
 	\begin{proposition} Soient $u,u^{[1]},u^{[2]}\in \mathbb{R}[[x]]$, et $v,v^{[1]},v^{[2]} \in \mathbb{R}_{+}[[x]]$ tels que $u\leq v,u^{[1]}\leq v^{[1]}$ et $u^{[2]}\leq v^{[2]}$ alors
@@ -406,20 +405,22 @@
 	\end{proposition}
 	
 	\noindent\textbf{Méthode de majoration avec un example simple}\\
-	On choisit une série a(z) définie sur $D=\{z,|z|<\rho\}$ soit $u$ une autre série vérifiant $u'(z)=a(z)u(z)$ alors le rayon de convergence de $u$ est le même que celui de a.
-	\\
+	On choisit une série a(z) définie sur $D=\{z,|z|<\rho\}$ soit $u$ une autre série vérifiant $u'(z)=a(z)u(z)$ alors le rayon de convergence de $u$ est le même que celui de a.\\
+	La fonction série un rayon de convergence $\rho$ donne à s'intéresser à une majoration de la forme
+	\[M(z)=\frac{m}{(1-\rho^{-1} z)^{\kappa}}\] 
 	
-	\noindent\textbf{Démonstration} Pour commencer, $\exists M \in \mathbb{R}_{+}, \forall n$ $|a_{n}|\leq M \rho^{-n}$.
+	\noindent\textbf{Méthode} Pour commencer, $\exists M \in \mathbb{R}_{+}, \forall n$ $|a_{n}|\leq M \rho^{-n}$.
 	On écrit la relation sur u en terme de séries: $(n+1)u_{n+1}=\sum_{k=0}^{n}u_{n-j}a_{j}$ en considérant $v$ telle que  $(n+1)v_{n+1}=\sum_{k=0}^{n}v_{n-j}M\rho^{-j}$ on observe $v'(z)=\frac{M}{1-z\rho^{-1}}v(z)$ \\
-	On a $v=v_{0}(1-z\rho^{-1})^{-M\rho}$. Si $|u_{0}| \leq v_{0}$ la récurrence permet de conclure $ u\unlhd v$. On sait que le rayon de convergence de $v$ est $\rho$ donc celui de $u$ est supérieur à $\rho$.
+	On a $v=v_{0}(1-z\rho^{-1})^{-M\rho}$. Si $|u_{0}| \leq v_{0}$ la récurrence permet de conclure $ u\unlhd v$. On sait que le rayon de convergence de $v$ est $\rho$ donc celui de $u$ est supérieur à $\rho$, la condition $u'(z)=a(z)u(z)$ permet de conclure l'égalité.
 	
 	\subsection{Séries majorantes pour les fonctions D-finies normalisées}
 	
-	Soit D une équation différentielle normalisée, 
+	Soit D une équation différentielle normalisée, l'intérêt de cette normalisation est de se débarasser du $\kappa$ pour ne plus avoir de comportement asymptotique factoriel de la suite $u_n$. L'idée est la même que dans la méthode exposée précèdement, on cherche à trouver une récurrence qui pourra assurer que si les premiers coefficients sont bien majorés, alors la suite entière est majorée.
 	
 	\[\theta^{r}+\frac{a^{[r-1]}\theta^{r-1}+...+a^{[0]}}{a^{[r]}}\]
 	Le procédé de majoration est le suivant. En isolant le coefficient constant du développement de Taylor en zéro de chaque coefficient, l'équation se réecrit
 	\[Q(\theta).u=z(a^{[r-1]}\theta^{r-1}+...+a^{[0]}).u\]
+	
 	
 	\newpage
 	
@@ -429,14 +430,18 @@
 	La fonction de majoration renvoyée par la fonction Bound NormalDiffeq$(D,P_{\alpha},u)$  est de la  forme
 	\[g(z)=\frac{A}{(1-\alpha z)^{K}} \hspace{2mm}\text{si T=0}\hspace{6mm} g(z)=\text{A exp}(\frac{K/T}{(1-\alpha z)^{T}}) \hspace{2mm} \text{sinon.} \]
 	
-	\noindent L'objectif ici est de borner le coefficient $\gamma(f,z)=\sup_{k \geq 2} \left\|f'(z)^{-1}\frac{f^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}$ en utilisant la fonction majorante développée dans la partie précèdente. Elle respecte la propriété interessante $f\unlhd g$ et donc trouver $\alpha(g,z)$ sur cette fonction reviendrai à majorer $\alpha(f,z)$. L'objectif serait de trouver N à partir du quel $\left\|f'(z)^{-1}\frac{f^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}$ est décroissante. Alors 
-	\[\gamma(g,z)=max_{k=2}^{N}\left\|f'(z)^{-1}\frac{f^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}\] 
+	\noindent L'objectif ici est de borner le coefficient $\gamma(f,z)=\sup_{k \geq 2} \left\|f'(z)^{-1}\frac{f^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}$ en utilisant la fonction majorante développée dans la partie précèdente. Elle respecte la propriété interessante $f\unlhd g$ et donc trouver $\alpha(g,z)$ sur cette fonction reviendrai à majorer $\alpha(f,z)$. L'objectif serait de trouver N à partir du quel $\left\|g'(z)^{-1}\frac{g^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}$ est décroissante. Alors 
+	\[\gamma(g,z)=max_{k=2}^{N}\left\|g'(z)^{-1}\frac{g^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}\] 
 	
+	\begin{proposition} Dans le cas $T=0$ on a \[\gamma(g,z)=max_{k=2}^{\lceil e^{1}K!^{\frac{1}{K-1}} \rceil}\left\|g'(z)^{-1}\frac{g^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}\]
+	\end{proposition}
+
+	\noindent\textbf{Démonstration}
 	\noindent En étudiant l'expression de la fonction de majoration pour $T=0$ on obtient
 	\[g^{(k)}(z)=\frac{A\alpha^{k}\prod_{i=0}^{k-1}(K+i)}{(1-\alpha z)^{K+k}}\]
 	On peut écrire,
 	\[\frac{g^{(k)}(z)}{k!}=\frac{A\alpha^{k}}{(1-\alpha z)^{K+k}} \frac{\prod_{i=1}^{K-1}(k+i)}{(K-1)!} \]
-	On a finalement, pour $z \leq \alpha$
+	On a finalement, pour $z < \alpha$
 	\[\left\|g'(z)^{-1}\frac{g^{(k)}(z)}{k!}\right\|^{\frac{1}{k-1}}= \frac{\alpha}{1-\alpha z} \left\|\frac{\prod_{i=1}^{K-1}(k+i)}{K!}\right\|^{\frac{1}{k-1}} \tag{*}\]
 	Considérons cette expression comme une fonction de $\mathbb{R}$ dans $\mathbb{R}$. On a donc un polynôme de degré $K-1$.
 	\[P(k)=\frac{\prod_{i=1}^{K-1}(k+i)}{K!}\]
@@ -449,50 +454,61 @@
 	qui détermine le signe de la dérivée de h. On regarde donc l'expression 
 	\[(k-1)P'(k)-P(k)ln(P(k))=P(k)\Big[\big(\sum_{i=1}^{K-1}\frac{k-1}{k+i}\big)-ln(P(k))\Big]\]
 	On majore $\frac{k-1}{k+i}$ par 1 et minore $P(k)$ par $\frac{k^{K-1}}{K!}$ On est sûr que la série est décroissante lorsque 
-	\[K-1-ln(\frac{k^{K-1}}{K!})<0 \Longleftrightarrow e^{1}K!^{\frac{1}{K-1}}< k\]
+	\[K-1-ln\big(\frac{k^{K-1}}{K!}\big)<0 \Longleftrightarrow e^{1}K!^{\frac{1}{K-1}}< k\]
 	On sait alors que 
 	\[\gamma(f,z)=max_{k=2}^{\lceil e^{1}K!^{\frac{1}{K-1}} \rceil}\left\|f'(z)^{-1}\frac{f^{(k)}(z)}{k!}\right\| \]
 	
 	\vspace{1cm} 
 	
-	On s'intéresse maintenant au cas où $T\neq 0$ de l'expression, on veut développer $f(z)$ dans le cas où $T \neq 0$. En posant $\frac{f^{(k)}(z)}{k!}=\alpha_{k}(z)$, on obtient l'expression suivante
-	\[f(z+t)=\text{A exp }\Big(K/T \sum_{k=0}^{+\infty}\alpha_{k}(z)t^{k} \Big)\]
-	\[=\text{A} \Big[1+(K/T)\frac{\sum_{k=0}^{+\infty}\alpha_{k}(z)t^{k}}{1!}+(K/T)^{2}\frac{\big(\sum_{0}^{+\infty}\alpha_{k}(z)t^{k}\big)^{2}}{2!}+...+(K/T)^{l}\frac{\big(\sum_{0}^{+\infty}\alpha_{k}(z)t^{k}\big)^{l}}{l!}+...\Big]\]
+	On s'intéresse maintenant au cas où $T\neq 0$ de l'expression, on veut développer $f(z)$ dans le cas où $T \neq 0$. On ne s'en est pas préoccupé précèdement, mais ici, la constante A ne servira pas dans la majoration, qui sera absorbée dans division par $f'(z)$. En posant \[\alpha_{k}(z)=\frac{\big(\frac{1}{(1-\alpha z)^{T}}\big)}{k!}^{(k)}=\frac{\alpha^{k}}{(1-\alpha z)^{T+k}} \frac{\prod_{i=1}^{T-1}(k+i)}{(K-1)!},\] On a,
+	\[g(z+t)=\text{A exp}(\frac{K/T}{(1-\alpha (z+t))^{T}})\]
+	En intégrant ce qui a été dit précèdement et en développant en série entière à l'intérieur d'exponentiel on s'intéressera à
+	\[f(z+t)=\text{exp}\Big(K/T \sum_{k=1}^{+\infty}\alpha_{k}(z)t^{k} \Big)\]
+	
+	\[= 1+(K/T)\frac{\sum_{k=1}^{+\infty}\alpha_{k}(z)t^{k}}{1!}+(K/T)^{2}\frac{\big(\sum_{k=1}^{+\infty}\alpha_{k}(z)t^{k}\big)^{2}}{2!}+...+(K/T)^{l}\frac{\big(\sum_{k=1}^{+\infty}\alpha_{k}(z)t^{k}\big)^{l}}{l!}+...\]
 	En identifiant les coefficients correspondants à $t^{k}$
-	\[\frac{g^{(k)}(z)}{k!}=\text{A}\sum_{i=1}^{k}\frac{(K/T)^{i}}{i!}\Big(\sum_{r_{1}\leq r_{2}\leq ...\leq{r_{i}}}\Pi(r_{1},...,r_{i})\prod_{h=1}^{i}\alpha_{r_{h}}(z) \Big) \hspace{2mm} \text{avec }\sum r_{h}=k\]
+	\[\frac{f^{(k)}(z)}{k!}=\sum_{i=1}^{k}\frac{(K/T)^{i}}{i!}\Big(\sum_{r_{1}\leq r_{2}\leq ...\leq{r_{i}}}\Pi(r_{1},...,r_{i})\prod_{h=1}^{i}\alpha_{r_{h}}(z) \Big) \hspace{2mm} \text{avec }\sum_{h=1}^{i} r_{h}=k\]
 	Où $\Pi(r_{1},...,r_{i})$ est définie comme suit:\\
 	On regroupe les $r_{h}$ en $g$ groupes $\Gamma$ de coefficients égaux, soit $\Gamma_{h}$ leur taille telle que $\sum_{h=1}^{g}\Gamma_{h}=i$, alors
-	\[\Pi(r_{1},r_{2},...,r_{i})=\dbinom{i}{\Gamma_{g}}\times \dbinom{i-\Gamma_{g}}{\Gamma_{g-1}}\times ...\times \dbinom{\Gamma_{1}}{\Gamma_{1}}\]
+	\[\Pi(r_{1},r_{2},...,r_{i})=\dbinom{i}{\Gamma_{g}}\times \dbinom{i-\Gamma_{g}}{\Gamma_{g-1}}\times ...\times \dbinom{\Gamma_{1}}{\Gamma_{1}}=\frac{i!}{\Gamma_h! \times \Gamma_{h-1}! \times ... \times \Gamma_1!}\]
 	
 	
 	
 	\section{Les méthodes d'exclusion de zéros}
 	\subsection{L'algorithme de Bissection-exclusion de J.-C.Yakoubsohn}
+	L'idée fondamentale de l'algorithme de Jakoubsohn est de constuire une fonction $M(f,x)$ strictement décroissante sur $\mathbb{R}_+$ telle que si cette fonction ne s'annule pas sur un intervalle $[x-\alpha,x+\alpha]$, on peut assurer que la fonction f ne s'annule pas.
 	
+	\begin{definition}Soit f une fonction analytique en x, alors pour t suffisamment petit\\ $f(x+t)=f(x)+\sum_{k=1}^{+\infty} \frac{f^{(k)}(x)}{k!}t^{k}$. On définit $M(f,x)(t)=|f(x)|-\sum_{k=1}^{+\infty}|\frac{f^{(k)}(x)}{k!}|t^{k}$
+	\end{definition}
+	
+	\begin{proposition} Si $M(f,x)(\tau)=0$ alors la fonction $f$ ne s'annule pas sur $]x-\tau,x+\tau[$ 
+	\end{proposition}
+
 	\begin{algorithm}
 		\caption{bisection-exclusion method}
 		
 		\vspace{2mm}
 		
-		\textbf{Entrée:} fonction D-finie $F(x)=\sum_{n \geq\beta} f(n)x^{n}$. interval (a,b)
+		\textbf{Entrée:} fonction D-finie $f(x)=\sum_{n \geq 0} \mathbb{f}(n)x^{n}$. interval (a,b)
 		
 		\textbf{Sortie:} $(a_{1},b_{1})\cup (a_{2},b_{2})$
 		
 		\begin{algorithmic}[1]
 			
-			\STATE $g(x)=|g(\frac{a+b}{2})|-maj(F(x-\frac{a+b}{2})-F(\frac{a+b}{2}))$
+			\STATE $g(t)=:M(f,\frac{a+b}{2})(t)$
 			\STATE c=premier\_zero\_positif(g)
 			\STATE Renvoyer($(a,\frac{a+b}{2}-c)\cup (\frac{a+b}{2}+c,b)$)
 		\end{algorithmic}
 		
 	\end{algorithm}
 	
+	\noindent Ici, on n'a qu'une étape de l'algorithme et l'idée sera bien sûr d'appliquer récursivement cette fonction pour avoir des intervalles de plus en plus précis. L'article de Jakoubsohn donne une discussion plus complète sur la taille des intervalles en fonctions des "clusters" de zéros.\\
 	\noindent maj: fonction de majoration fournie dans le module Ore\_algebra.analytic de Marc Mezzarobba\\
 	zéropositif(g): le premier zéro sur lequel la fonction g s'annule sur ${R}$
 	
 	
 	\subsection{Séparation des zéros via la méthode de Rouché}
-	une autre façon d'exclure des régions de l'espace, maintenant que nous avons des majorations de $\gamma$ est la méthode de Rouché. On introduira la même notation que dans le livre de Dedieu.\\
+	une autre façon d'exclure des régions de l'espace, maintenant que nous avons des majorations de $\gamma$ est la méthode de Rouché. On introduira la même notation que dans le livre de Dedieu. L'idée ici est d'exclure des intervalles lorsqu'on a trouvé un zéro certifié.\\
 	\begin{definition} Soient $\mathbb{E}$ et $\mathbb{F}$ des espaces de Banach et 
 		Soit $f:\mathbb{E}\rightarrow \mathbb{F}$ une fonction analytique, notons $\zeta$ un point de $\mathbb{E}$ tel que $f(\zeta)=0$, alors on note
 		\[sep(f,\zeta)=\inf_{f(\zeta '=0, \hspace{1mm} \zeta \neq \zeta ')}\left\|\zeta-\zeta '\right\|\] 
@@ -505,11 +521,10 @@
 	\end{theorem}
 	Cependant, dans notre cas, nous n'aurons bien souvent pas la valeur exacte de $\zeta$, il faut donc un théorème plus souple. 
 	\begin{theorem} Soit $f: \mathbb{C}^n\rightarrow \mathbb{C}^n$ une fonction analytique, $x_0 \in \mathbb{C}^n$ tel que $Df(x_0)$ soit un isomorphisme. Si $\alpha(f,x_0)<3-2\sqrt{2}$, il existe un et un seul zéro $\zeta$ de f avec
-		\[\left\|x_0-\zeta \right\|<\frac{2-\sqrt{2}}{2\gamma(f,x_0)}\] 
-		
+		\[\left\|x_0-\zeta \right\|<\frac{2-\sqrt{2}}{2\gamma(f,x_0)}\]
 	\end{theorem}
 	
-	\noindent On pourra alors exclure de petits intervalles
+	\noindent On pourra alors certifier le zéro dans un petit intervalle de la forme $[x_0-\frac{2-\sqrt{2}}{2\gamma(f,x_0)},x_0+\frac{2-\sqrt{2}}{2\gamma(f,x_0)}]$
 	
 \end{document}
 
